wip: add email client to document service