@@ -1,8 +1,13 @@
 package io.syncscribe.documentservice.endpoints;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
+import com.google.common.collect.ImmutableMap;
+import io.syncscribe.common.contracts.ShareLinkMailRequest;
+import io.syncscribe.documentservice.components.openfeign.EmailClient;
+import io.syncscribe.documentservice.contracts.*;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -14,10 +19,6 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import io.syncscribe.documentservice.components.documents.DocumentService;
-import io.syncscribe.documentservice.contracts.CreateDocumentRequest;
-import io.syncscribe.documentservice.contracts.GetDocumentResponse;
-import io.syncscribe.documentservice.contracts.ShareDocumentRequest;
-import io.syncscribe.documentservice.contracts.WriteDocumentRequest;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -25,18 +26,19 @@ import lombok.extern.slf4j.Slf4j;
 @RestController
 @RequestMapping("/api/v1/documents")
 public class DocumentEndpoint {
-
     private final DocumentService documentService;
+    private final EmailClient emailClient;
 
-    public DocumentEndpoint(DocumentService documentService) {
+    public DocumentEndpoint(DocumentService documentService, EmailClient emailClient) {
         this.documentService = documentService;
+        this.emailClient = emailClient;
     }
 
-    @GetMapping(params = { "page", "size" })
+    @GetMapping(params = {"page", "size"})
     public List<GetDocumentResponse> listDocuments(@RequestParam int page, @RequestParam int size) {
         return documentService.listDocuments(page, size).stream()
                 .map(doc -> new GetDocumentResponse(doc.getId(), doc.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @PostMapping
@@ -53,6 +55,11 @@ public class DocumentEndpoint {
     @PostMapping("/{id}/share")
     public void shareDocument(@PathVariable String id, ShareDocumentRequest request) {
         documentService.shareDocument(id, request);
+        var mailRequest = new ShareLinkMailRequest(
+                request.visitors().stream().map(DocumentVisitor::email).toList(),
+                ImmutableMap.of()
+        );
+        emailClient.sendEmail(mailRequest);
     }
 
     @PutMapping("/{id}")
